# paper2data-retrieval-agent

./: .env.example  .gitignore  1  README.md  pyproject.toml  setup_env.sh
albench/: model.py  task.py
albench/data/: base.py  hashfrag_splits.py  k562.py  pool.py  utils.py  yeast.py
albench/models/: base.py  dream_rnn.py  loss_utils.py  training.py  training_base.py
docs/: schema_field_ownership.md
scripts/: download_data.py
scripts/slurm/: baseline.sh  create_hashfrag_splits.sh
src/: batch_run.py  compare_batches.py  database_cli.py  main.py  network_preflight.py  web_app.py
src/agents/: __init__.py  anatomy.py  archetype.py  data_availability.py  manager.py  metadata.py  metadata_enrichment.py  methods.py  quality_control.py  results.py  synthesis.py
src/database/: __init__.py  embeddings.py  harmonizer.py  reviewer.py  store.py
src/schemas/: __init__.py  models.py
src/tools/: biblio_tools.py  file_tools.py  geo_tools.py  http_tools.py  repository_tools.py
src/utils/: confidence.py  config.py  env.py  http_client.py  logging.py  network.py  organisms.py  retry.py  taxonomy.py
tests/: test_data.py  test_database.py  test_pipeline.py
