[project]
name = "paper2data-retrieval-agent"
version = "0.1.0"
description = "Data retrieval agent for Paper2Data - extracts structured data from scientific papers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.8",
    "openai>=1.60",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
